--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 
 <head>
+    <script src="test.js"></script>
     <script src="http://maker.js.org/target/js/browser.maker.js" type="text/javascript"></script>
     <script src="curve.js"></script>
-
-    <script src="obj.js"></script>
     <script src="cope.js"></script>
 </head>
 
